# microagents

./: .gitignore  .microagentsignore  Cargo.toml  LICENSE  README.md  jakefile.toml  questions.json  retrieval_queries.md  skills-lock.json
.github/workflows/: lint.yaml  pages.yaml  publish.yaml  test.yaml
agentic-evals/: README.md  pyproject.toml
agentic-evals/answers/microag/: 2022.json  2022_1.json  2022_2.json  Apple_Environmental_Progress_Report_2024.json  Apple_Environmental_Progress_Report_2024_1.json  Apple_Environmental_Progress_Report_2024_2.json  Microsoft-2024-Environmental-Sustainability-Report.json  Microsoft-2024-Environmental-Sustainability-Report_1.json  Microsoft-2024-Environmental-Sustainability-Report_2.json  Orange 2023 IAR - On track_1.json  Orange 2023 IAR - On track_2.json  bp-sustainability-report-2023.json  bp-sustainability-report-2023_1.json  bp-sustainability-report-2023_2.json
agentic-evals/answers/microag/raw_txt/: 2022.raw.txt  2022.raw_1.txt  2022.raw_2.txt  Apple_Environmental_Progress_Report_2024.raw.txt  Apple_Environmental_Progress_Report_2024.raw_1.txt  Apple_Environmental_Progress_Report_2024.raw_2.txt  Microsoft-2024-Environmental-Sustainability-Report.raw.txt  Microsoft-2024-Environmental-Sustainability-Report.raw_1.txt  Microsoft-2024-Environmental-Sustainability-Report.raw_2.txt  Orange 2023 IAR - On track.raw.txt  Orange 2023 IAR - On track.raw_1.txt  Orange 2023 IAR - On track.raw_2.txt  bp-sustainability-report-2023.raw.txt  bp-sustainability-report-2023.raw_1.txt  bp-sustainability-report-2023.raw_2.txt
agentic-evals/evaluations/microag/: 2022.json  2022_1.json  2022_2.json  Apple_Environmental_Progress_Report_2024.json  Apple_Environmental_Progress_Report_2024_1.json  Apple_Environmental_Progress_Report_2024_2.json  Microsoft-2024-Environmental-Sustainability-Report.json  Microsoft-2024-Environmental-Sustainability-Report_1.json  Microsoft-2024-Environmental-Sustainability-Report_2.json  Orange 2023 IAR - On track.json  Orange 2023 IAR - On track_1.json  Orange 2023 IAR - On track_2.json  bp-sustainability-report-2023.json  bp-sustainability-report-2023_1.json  bp-sustainability-report-2023_2.json
agentic-evals/scripts/: run_bench_microag.sh
agentic-evals/src/agentic_evals/: download_data.py  download_qa.py  run_microag.py
agentic-evals/src/agentic_evals/analysis/: judge.py  trace.py
agentic-evals/traces/microag/: 2022.jsonl  2022_1.jsonl  2022_2.jsonl  Apple_Environmental_Progress_Report_2024.jsonl  Apple_Environmental_Progress_Report_2024_1.jsonl  Apple_Environmental_Progress_Report_2024_2.jsonl  Microsoft-2024-Environmental-Sustainability-Report.jsonl  Microsoft-2024-Environmental-Sustainability-Report_1.jsonl  Microsoft-2024-Environmental-Sustainability-Report_2.jsonl  Orange 2023 IAR - On track.jsonl  Orange 2023 IAR - On track_1.jsonl  Orange 2023 IAR - On track_2.jsonl  bp-sustainability-report-2023.jsonl  bp-sustainability-report-2023_1.jsonl  bp-sustainability-report-2023_2.jsonl
evals/configs/: experiment-baseline.json  experiment-bm25-only-1000-chunks.json  experiment-bm25-only-2000-chunks.json  experiment-bm25-only-rerank-10.json  experiment-bm25-only-smaller-chunks.json  experiment-bm25-only.json  experiment-correct-rrf.json  experiment-full-hybrid-1000-chunks.json  experiment-hnsq-tuning.json  experiment-hnsw-and-quantiz.json  experiment-hnsw-config-full-hybrid-8MB.json  experiment-hnsw-tuning-m-60.json  experiment-hnsw-tuning.json  experiment-hybrid-longer-bm25-1000.json  experiment-hybrid-longer-bm25-normalize.json  experiment-jina-split-embeddings-more-code-weight.json  experiment-jina-split-embeddings-with-reranking-top-2-files.json  experiment-jina-split-embeddings-with-reranking.json  experiment-jina-split-embeddings.json  experiment-less-dense.json  experiment-less-less-dense.json  experiment-more-dense.json  experiment-more-more-dense.json  experiment-no-quantization-baseline-hybrid-8MB.json  experiment-no-quantization-full-hybrid-8MB.json  experiment-no-quantization-full-hybrid.json  experiment-overlap-nodes-20.json  experiment-overlap-nodes-30.json  experiment-overlap-nodes-50.json  experiment-prefetch-50.json  experiment-product-quant-x4.json  experiment-product-quant-x8.json  experiment-real-bm25-only.json  experiment-top-15.json  experiment-tune-bm25-full-1000.json  experiment-tune-bm25-full.json  experiment-tune-bm25.json
evals/experiment-bm25-only/: report.json
evals/experiment-correct-rrf/: report.json
evals/experiment-dbsf/: report.json
evals/experiment-dense-only-300-chunks/: report.json
evals/experiment-dense-only-smaller-chunks/: report.json
evals/experiment-hnsq-tuning/: report.json
evals/experiment-hnsw-tuning/: report.json
evals/experiment-hnsw-tuning-m-60/: report.json
evals/experiment-hybrid-longer-bm25-1000/: report.json
evals/experiment-jina-split-embeddings/: report.json
evals/experiment-jina-split-embeddings-more-code-weight/: report.json
evals/experiment-jina-split-embeddings-with-reranking/: report.json
evals/experiment-jina-split-embeddings-with-reranking-top-2-files/: report.json
evals/experiment-less-less-dense/: report.json
evals/experiment-no-code-search/: report.json
evals/experiment-no-quantization-baseline-hybrid-8MB/: report.json
microagents-cli/: Cargo.toml  README.md
microagents-cli/src/: init_env.rs  lib.rs  main.rs  processing.rs  search.rs  tools.rs
microagents-cli/src/tui/: mod.rs
microagents-cli/tests/: integration_test.rs
microagents-core/: Cargo.toml  README.md
microagents-core/src/: agent.rs  common.rs  events.rs  lib.rs  skills.rs  types.rs
microagents-core/src/providers/: openai.rs
microagents-core/tests/: integration_test.rs
microagents-events/: Cargo.toml  README.md
microagents-events/src/: lib.rs  types.rs
microagents-storage/: Cargo.toml  README.md
microagents-storage/src/: jsonl.rs  lib.rs  memory.rs  sqlite.rs  types.rs
pages/: index.html
scripts/: poll-for-crates.sh
search-evals/: Cargo.toml
search-evals/src/: comparison.rs  ingest.rs  load_questions.rs  main.rs  search.rs
(+27 files in other folders)
