[package]
name = "microagents-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures-core = "0.3.32"
futures-util = "0.3.32"
liteparse = "2.0.2"
microagents-core = {path = "../microagents-core"}
microagents-events = {path = "../microagents-events"}
microagents-storage = {path = "../microagents-storage"}
model2vec-rs = "0.2.1"
qdrant-edge = "0.6.1"
ratatui = {version = "0.30.0", features = ["serde", "palette"]}
serde_json = "1.0.150"
unicode-width = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
ignore = "0.4.25"
chunk = "0.10.1"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
regex = "1.12.3"
clap = { version = "4.6.1", features = ["derive"] }

[[bin]]
name = "microag"
path = "src/main.rs"
