[package]
name = "microagents-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures-core = "0.3.32"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ultrafast-models-sdk = {version = "0.1.6", features = ["openai", "anthropic", "groq", "mistral", "cohere", "azure", "bedrock", "standalone", "ollama"]}
