[package]
name = "microagents-core"
version = "0.3.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AstraBert/microagents"
description = "Core microagents framework library"
keywords = ["ai", "agents", "framework", "rust"]


[dependencies]
async-trait = "0.1.89"
tempfile = "3"
dirs = "6.0.0"
futures-core = "0.3.32"
futures-util = "0.3.32"
jsonschema = "0.46.5"
markdown-frontmatter = { version = "0.5.1", features = ["full"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
dashmap = "6"
ultrafast-models-sdk = { version = "0.1.6", features = ["openai", "anthropic", "groq", "mistral", "cohere", "azure", "bedrock", "standalone", "ollama"] }
microagents-events = { path = "../microagents-events", version = "0.1.0" }
microagents-storage = { path = "../microagents-storage", version = "0.1.0" }
async-stream = "0.3.6"
uuid = { version = "1.23.1", features = ["v4"] }
tokio = { version = "1.52.3", features = ["full"] }
chrono = { version = "0.4.45", features = ["serde"] }
tokie = { version = "0.0.10", features = ["hf"], optional = true }

[dev-dependencies]
serial_test = "3.5.0"

[features]
default = ["token_estimation"]
token_estimation = ["dep:tokie"]
