[package]
name = "microagents-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = {version =  "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
microagents-events = {path = "../microagents-events"}
anyhow = "1.0.102"
dirs = "6.0.0"
fs2 = "0.4.3"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rusqlite = {version = "0.7.0", features = ["serde_json", "bundled-windows"]}

[dev-dependencies]
serial_test = "3.5.0"
