[package]
name = "microagents-storage"
version = "0.1.2"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AstraBert/microagents"
description = "Session storage layer for the microagents framework"
keywords = ["ai", "agents", "session-storage", "rust"]


[dependencies]
async-trait = "0.1.89"
serde = { version =  "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
microagents-events = { path = "../microagents-events", version = "0.3.0" }
anyhow = "1.0.102"
dirs = "6.0.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "io-std", "io-util", "sync", "fs", "macros"] }
tokio-rusqlite = { version = "0.7.0", features = ["serde_json", "bundled-windows"] }

[dev-dependencies]
serial_test = "3.5.0"
tempfile = "3"
chrono = { version = "0.4.45", features = ["serde"] }
