[package]
name = "search-evals"
version = "0.1.0"
edition = "2024"

[dependencies]
microagents-cli = { path = "../microagents-cli", version = "0.3.0" }
serde = { version =  "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
